--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,16 @@
 {
+   "builds": [
+    {
+      "src": "src/main.jsx",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ],
    "rewrites":  [
        {"source": "/(.*)", "destination": "/"}
     ]
