--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,12 @@
 {
-   
-   "rewrites":  [
-       {"source": "/(.*)", "destination": "/"}
-    ]
+  "builds": [
+    {
+      "src": "src/**/*",
+      "use": "@vercel/static-build",
+      "config": { "distDir": "dist" }
+    }
+  ],
+  "routes": [
+    { "src": "/(.*)", "dest": "/index.html" }
+  ]
 }
