--- a/package.json
+++ b/package.json
@@ -10,10 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "@tinymce/tinymce-react": "^5.1.1",
     "appwrite": "^14.0.1",
+    "glob": "^11.0.0",
     "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.24.1",
+    "rimraf": "^6.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
